--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<bukkitVersion>1.13.1-R0.1-SNAPSHOT</bukkitVersion>
 		<mainClass>${project.groupId}.${project.artifactId}</mainClass>
-		<api.version>1.8</api.version>
+		<api.version>1.9</api.version>
 	</properties>
 
 	<!-- Project information -->
 	<groupId>net.milkbowl.vault</groupId>
-	<artifactId>Vault</artifactId>
-	<version>${api.version}.3</version>
+	<artifactId>vault2</artifactId>
+	<version>${api.version}</version>
 	<name>Vault</name>
 	<url>https://dev.bukkit.org/projects/vault</url>
 	<description>Vault is a Chat, Permissions &amp; Economy API to allow plugins to more easily hook into these systems without needing to hook each individual system themselves.</description>
@@ -38,15 +38,10 @@
 
 	<distributionManagement>
 		<repository>
-			<id>pub-repo</id>
-			<name>Public Releases</name>
-			<url>http://nexus.hc.to/content/repositories/pub_releases/</url>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/anjoismysign/Vault2</url>
 		</repository>
-		<snapshotRepository>
-			<id>pub-repo</id>
-			<name>Public Snapshots</name>
-			<url>http://nexus.hc.to/content/repositories/pub_snapshots/</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 	<repositories>
@@ -78,7 +73,7 @@
 		<dependency>
 		<groupId>net.milkbowl.vault</groupId>
 		<artifactId>vaultapi</artifactId>
-		<version>2.2-SNAPSHOT</version>
+		<version>2.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bstats</groupId>
