--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<bukkitVersion>1.13.1-R0.1-SNAPSHOT</bukkitVersion>
 		<mainClass>${project.groupId}.${project.artifactId}</mainClass>
-		<api.version>1.9</api.version>
+		<api.version>1.7.4-SNAPSHOT</api.version>
 	</properties>
 
 	<!-- Project information -->
@@ -73,7 +73,7 @@
 		<dependency>
 		<groupId>net.milkbowl.vault</groupId>
 		<artifactId>vaultapi</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bstats</groupId>
