--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
-name: ${project.name}
-version: ${project.version}-b${env.TRAVIS_BUILD_NUMBER}
+name: Vault
+version: ${project.version}
 description: ${project.description}
 authors: [cereal, Sleaker, mung3r]
 website: ${project.url}
 api-version: 1.13
 
-main: ${mainClass}
+main: net.milkbowl.vault.Vault
 load: startup
 
 commands:
