--- a/pom.xml
+++ b/pom.xml
@@ -1,137 +1,138 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.13.1-R0.1-SNAPSHOT</bukkitVersion>
-		<mainClass>${project.groupId}.${project.artifactId}</mainClass>
-		<api.version>1.7.4-SNAPSHOT</api.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <bukkitVersion>1.13.1-R0.1-SNAPSHOT</bukkitVersion>
+        <mainClass>${project.groupId}.${project.artifactId}</mainClass>
+        <api.version>1.7.4-SNAPSHOT</api.version>
+    </properties>
 
-	<!-- Project information -->
-	<groupId>net.milkbowl.vault</groupId>
-	<artifactId>vault2</artifactId>
-	<version>${api.version}</version>
-	<name>Vault</name>
-	<url>https://dev.bukkit.org/projects/vault</url>
-	<description>Vault is a Chat, Permissions &amp; Economy API to allow plugins to more easily hook into these systems without needing to hook each individual system themselves.</description>
+    <!-- Project information -->
+    <groupId>net.milkbowl.vault</groupId>
+    <artifactId>vault2</artifactId>
+    <version>${api.version}</version>
+    <name>Vault</name>
+    <url>https://dev.bukkit.org/projects/vault</url>
+    <description>Vault is a Chat, Permissions &amp; Economy API to allow plugins to more easily hook into these systems
+        without needing to hook each individual system themselves.
+    </description>
 
 
+    <!-- Organization -->
+    <organization>
+        <name>MilkBowl</name>
+        <url>https://github.com/anjoismysign/Vault2</url>
+    </organization>
 
-	<!-- Organization -->
-	<organization>
-		<name>MilkBowl</name>
-		<url>https://github.com/anjoismysign/Vault2</url>
-	</organization>
+    <scm>
+        <url>https://github.com/anjoismysign/Vault2</url>
+        <connection>scm:git:git://github.com:anjoismysign/Vault2.git</connection>
+        <developerConnection>scm:git:git@github.com:anjoismysign/Vault2.git</developerConnection>
+    </scm>
 
-	<scm>
-		<url>https://github.com/anjoismysign/Vault2</url>
-		<connection>scm:git:git://github.com:anjoismysign/Vault2.git</connection>
-		<developerConnection>scm:git:git@github.com:anjoismysign/Vault2.git</developerConnection>
-	</scm>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/anjoismysign/Vault2/issues</url>
+    </issueManagement>
 
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/anjoismysign/Vault2/issues</url>
-	</issueManagement>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/anjoismysign/Vault2</url>
+        </repository>
+    </distributionManagement>
 
-	<distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/anjoismysign/Vault2</url>
-		</repository>
-	</distributionManagement>
+    <repositories>
+        <repository>
+            <id>pub-repo</id>
+            <name>Public Releases</name>
+            <url>http://nexus.hc.to/content/repositories/pub_releases/</url>
+        </repository>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>escapecraft-repo</id>
+            <url>http://dev.escapecraft.com/maven</url>
+        </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public</url>
+        </repository>
+    </repositories>
 
-	<repositories>
-		<repository>
-			<id>pub-repo</id>
-			<name>Public Releases</name>
-			<url>http://nexus.hc.to/content/repositories/pub_releases/</url>
-		</repository>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>escapecraft-repo</id>
-			<url>http://dev.escapecraft.com/maven</url>
-		</repository>
-		<repository>
-			<id>codemc-repo</id>
-			<url>https://repo.codemc.org/repository/maven-public</url>
-		</repository>
-	</repositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>${bukkitVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>vaultapi</artifactId>
+            <version>1.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+    </dependencies>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>${bukkitVersion}</version>
-		</dependency>
-		<dependency>
-		<groupId>net.milkbowl.vault</groupId>
-		<artifactId>vaultapi</artifactId>
-		<version>2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bstats</groupId>
-			<artifactId>bstats-bukkit</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<defaultGoal>clean install</defaultGoal>
-		<sourceDirectory>src/</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>${project.basedir}</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>plugin.yml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<createDependencyReducedPom>false</createDependencyReducedPom>
-					<artifactSet>
-						<includes>
-							<include>net.milkbowl.vault:VaultAPI</include>
-							<include>org.bstats</include>
-						</includes>
-					</artifactSet>
-					<relocations>
-						<relocation>
-							<pattern>org.bstats</pattern>
-							<shadedPattern>net.milkbowl.vault.metrics</shadedPattern>
-						</relocation>
-					</relocations>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <defaultGoal>clean install</defaultGoal>
+        <sourceDirectory>src/</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>${project.basedir}</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>plugin.yml</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <artifactSet>
+                        <includes>
+                            <include>net.milkbowl.vault:VaultAPI</include>
+                            <include>org.bstats</include>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>net.milkbowl.vault.metrics</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
